# axum-sqlx-utoipa

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  docker-compose.yml
migrations/: 0001_create_tables.sql  0003_orders_audit_logs.sql
src/: audit.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  response.rs  state.rs
src/dto/: auth.rs  cart.rs  favorites.rs  mod.rs  orders.rs  products.rs
src/entity/: audit_logs.rs  cart_items.rs  favorites.rs  mod.rs  order_items.rs  orders.rs  products.rs  users.rs
src/middleware/: auth.rs
src/routes/: admin.rs  auth.rs  cart.rs  doc.rs  favorites.rs  health.rs  mod.rs  orders.rs  params.rs  products.rs
src/services/: admin_service.rs  auth_service.rs  cart_service.rs  favorite_service.rs  mod.rs  order_service.rs  product_service.rs
tests/: health.rs  orders_flow.rs
