[package]
name = "axum-ecommerce-api"
version = "0.1.0"
edition = "2024"
default-run = "axum-ecommerce-api"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
tower = { version = "0.5", features = ["limit"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing = "0.1.40"
utoipa = { version = "5.4.0", features = [
  "macros",
  "uuid",
  "chrono",
  "axum_extras",
] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "request-id", "limit"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
password-hash = { version = "0.5.0", features = ["rand_core"] }
